--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body {
 }
 
 .carre {
-  lenght: 100px
-  height : 100
-  color : black 
+  lenght: 100px;
+  height : 100 px;
+  color : black ;
 
 }
 
