--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ body {
 
 }
 .carrea {
-  length : 150 px
-  right : 30 px
- height : 100 px
-color : black 
+  length : 150 px;
+  right : 30 px;
+ height : 100 px;
+color : black ;
 }
 
 
