--- a/style.css
+++ b/style.css
@@ -4,22 +4,21 @@ body {
   color:blue   ; font-size:14px;
 }
 
-.carre {
-  length : 100 px;
-  height : 100 px;
-  color : black ;
-
-}
 .carrea {
   length : 150 px;
   left : 30 px;
-  height : 100 px;
+  height : 50 px;
   color : black ;
 }
 
 p {
   text-align: center
  }
-
+ .carre {
+  length :150 px;
+  width  : 50px;
+  height : 50px;
+  background : green;
+}
 
 
