--- a/style.css
+++ b/style.css
@@ -5,20 +5,22 @@ body {
 }
 
 .carrea {
-  length : 150 px;
+  width: 50 px;
   left : 30 px;
   height : 50 px;
   color : black ;
 }
 
-p {
-  text-align: center
+body{
+  display: flex;
+  align-items: center; 
+}
  }
  .carre {
-  length :150 px;
-  width  : 50px;
+  right : 50 px;
+  width : 50px;
   height : 50px;
-  background : green;
+  color : green;
 }
 
 
