--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ body {
 }
 
 .carrea {
-  width: 50 px;
-  left : 30 px;
-  height : 50 px;
-  color : black ;
+  width: 50px;
+  left : 30px;
+  height : 50px;
+  background-color : black ;
 }
 
 body{
@@ -16,10 +16,10 @@ body{
 }
  
  .carre {
-  right : 50 px;
+  right : 50px;
   width : 50px;
-  height : 50 px;
-  color : black ;
+  height : 50px;
+  background-color : black ;
 }
 
 
