--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
 
 .carrea {
   width: 50px;
-  left : 150px;
+  left : 30px;
   height : 50px;
-  background-color : black ;
+  background-color : rgb(219, 21, 21) ;
 }
 
 body{
@@ -17,9 +17,9 @@ body{
  
  .carre {
   right : 50px;
-  width : 150px;
+  width : 50px;
   height : 50px;
-  background-color : black ;
+  background-color : rgb(21, 30, 3) ;
 }
 
 
