--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
   color : red;
-  background-color: beige;
-  color:blue   ; font-size:14px;
+  background-color: rgba(220, 245, 231, 0.592);
+  color:blue   ; font: size 20px;
 }
 
 .carrea {
   width: 50px;
-  left : 30px;
-  height : 50px;
+  left : 60px;
+  height : 75px;
   background-color : rgb(219, 21, 21) ;
 }
 
@@ -16,12 +16,15 @@ body{
 }
  
  .carre {
-  right : 50px;
+  right : 60px;
   width : 50px;
-  height : 50px;
+  height : 75px;
   background-color : rgb(21, 30, 3) ;
+
 }
 
-
+p{
+  color : black
+}
 
 
