--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   color : red;
   background-color: rgba(220, 245, 231, 0.592);
   color:blue;
-  font-size:  40px;}
+  font-size:  40px;
+}
 
 .carre {
   width : 50 px;
