--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
 }
 .carrea {
   width : 50px;
-  background-color: blue;
-  height: 50px;
+  background-color : blue;
+  height : 50px;
   right: 50px;
-  border-radius: 50%
+  border-radius: 50%;
 }
 
