--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@ body {
   border-radius: 50%;
 }
 
+nav li {
+
+display: inline-block;
+width: 150px;
+  height: 50px;
+  line-height: 50px;           
+  text-align: center;
+  border: 1px solid red;
+}
