--- a/style.css
+++ b/style.css
@@ -19,13 +19,18 @@ body {
   border-radius: 50%;
 }
 
-nav li {
+. nav li {
 
 display: inline-block;
 width: 150px;
-  height: 50px;
-  line-height: 50px;           
-  text-align: center;
-  border: 1px solid red;
+height: 50px;
+line-height: 50px;           
+ text-align: center;
+border: 1px solid red;
 }
+
+.h1{
+  text-align: center
+}
+
 
