--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
 }
 
 .carre{
-  width : 70px;
+  width : 100px;
   background-color : black ;
   height : 50px;
   
 }
 .carrea {
-  width : 50px;
+  width :100px;
   background-color : blue ;
   height : 50px;
   right: 50px;
@@ -26,7 +26,7 @@ width: 150px;
 height: 50px;
 line-height: 50px;           
  text-align: center;
-border: 1px solid red;
+border: 1px solid black;
 }
 
 .h1{
