--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ body {
   border-radius: 50%;
 }
 
-. nav li {
+. li {
 
 display: inline-block;
 width: 150px;
 height: 50px;
 line-height: 50px;           
- text-align: center;
+text-align: center;
 border: 1px solid black;
 }
 
