--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  color : red;
+  color : rgb(26, 2, 2);
   background-color: rgba(220, 245, 231, 0.592);
   color:blue;
   font-size: 40px;
@@ -9,12 +9,9 @@ body {
   width : 300px;
   background-color : black ;
   height : 50px;
-
-
 }
 
 .nav li {
-
 display: inline-block;
 width: 150px;
 height: 150px;
