--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ line-height: 50px;
 text-align: center;
 border: 1px solid black;
 }
-
+.h1 {
+  text-align: center
 
 
 }
+
 nav{ 
 
   background-color: black;
