--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ li {
       padding:10px;
       font-size:20px;
       text-decoration:none;
+      margin:30px
       }
       li a:hover {
         border-bottom:3px #FFF solid;
