--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav{
 
   background-color: black;
   color : white
-; 
+; text-align: center;
 }
 
 nav ul {
@@ -38,12 +38,12 @@ nav ul {
 }
 
 li {
-  list-style:none !important; /*On enlève les puces de la liste */
+  list-style:none !important; 
   color:#FFF;
   padding:10px;
   font-size:20px;
   text-decoration:none;
-  }
+   }
   nav ul {
     background-color:black;
     padding:0;
@@ -61,9 +61,11 @@ li {
       font-size:20px;
       text-decoration:none;
       margin:30px
+      text-align: center
       }
       li a:hover {
         border-bottom:3px #FFF solid;
+        
         }
        nav ul li ul { 
           display:none; 
